Adding contacts page

--- a/hairdresser.html
+++ b/hairdresser.html
@@ -61,6 +61,8 @@
                     <li class="nav-item"><a class="nav-link link text-white display-4" href="gallery.html">Галерия</a></li>
                     <li class="nav-item"><a class="nav-link link text-white display-4" href="services.html">
                         Услуги</a></li>
+                    <li class="nav-item"><a class="nav-link link text-white display-4" href="contacts.html">
+                        Контакти</a></li>
                 </ul>
 
             </div>
@@ -298,10 +300,13 @@
                         <img src="assets/images/heavensofbeautylogo2-264x193.png" alt="Heavens of beauty LOGO" title="Heavens of Beauty">
                     </a>
                     </div>
-                    <p class="mbr-text" style="padding-top: 13px"><a href="index.html" class="text-white">Heavens of Beauty</a><br>
-                        <a href="about.html" class="text-white">За нас </a>
-                        <br><a href="services.html" class="text-white">Услуги
-        </a><br><a href="products.html" class="text-white">Продукти</a><br></p>
+                    <p class="mbr-text" style="padding-top: 13px"><a href="index.html" class="text-white">Heavens of
+                        Beauty</a><br>
+                    <a href="about.html" class="text-white">За нас </a>
+                    <br><a href="services.html" class="text-white">Услуги</a>
+                    <br><a href="products.html" class="text-white">Продукти</a>
+                    <br><a href="contacts.html" class="text-white">Контакти</a><br>
+                </p>
                 </div>
                 <div class="col-12 col-md-3 mbr-fonts-style display-7">
                     <p class="mbr-text">Адрес
